# CVulkanGameEngine

./: CMakeLists.txt  LICENSE  README.md  config.h.in
Engine/Source/: CMakeLists.txt  Defines.h  Entry.h  GameTypes.h  config.h  game_types.h
Engine/Source/Containers/: DArray.h  DynamicArray.c  DynamicArray.h  dynamic_array.c  dynamic_array.h  freelist.c  freelist.h  hash_table.c  hash_table.h  linked_list.c  linked_list.h  string_map.c  string_map.h  string_map_old.c  string_map_old.h
Engine/Source/Core/: Application.c  Application.h  Asserts.h  Clock.c  Clock.h  Events.c  Events.h  Input.c  Input.h  Logger.c  Logger.h  Memory.c  Memory.h  String.c  String.h  math_utils.h  memory_utils.c  memory_utils.h  string_utils.c  string_utils.h
Engine/Source/Platform/: Platform.h  PlatformWin32.c  filesystem.c  filesystem.h  platform_win32.c
Engine/Source/Renderer/: RendererBackend.c  RendererBackend.h  RendererFrontend.c  RendererFrontend.h  RendererTypes.h  RendererTypes.inl  descriptor_pool_manager.h  renderer.c  renderer.h  renderer_backend.c  renderer_backend.h  renderer_frontend.c  renderer_frontend.h  renderer_types.h  renderer_types.inl  renderer_utils.h  shader.c  shader.h  structures.h  vulkan_initializers.h  vulkan_structure_initializers.h
Engine/Source/Renderer/Vulkan/: VulkanBackend.c  VulkanBackend.h  VulkanCommandBuffer.c  VulkanCommandBuffer.h  VulkanDevice.c  VulkanDevice.h  VulkanFence.c  VulkanFence.h  VulkanFramebuffer.c  VulkanFramebuffer.h  VulkanImage.c  VulkanImage.h  VulkanPlatform.c  VulkanPlatform.h  VulkanRenderpass.c  VulkanRenderpass.h  VulkanSwapchain.c  VulkanSwapchain.h  VulkanTypes.h  VulkanTypes.inl  VulkanUtils.c  VulkanUtils.h  vulkan_backend.c  vulkan_backend.h  vulkan_buffer.c  vulkan_buffer.h  vulkan_command_buffer.c  vulkan_command_buffer.h  vulkan_device.c  vulkan_device.h  vulkan_image.c  vulkan_image.h  vulkan_pipeline.c  vulkan_pipeline.h  vulkan_renderpass.c  vulkan_renderpass.h  vulkan_shader_utils.c  vulkan_shader_utils.h  vulkan_structures.h  vulkan_swapchain.c  (+5 more)
Engine/Source/Renderer/Vulkan/shaders/: vulkan_material_shader.c  vulkan_material_shader.h  vulkan_object_shader.c  vulkan_object_shader.h  vulkan_ui_shader.c  vulkan_ui_shader.h
Engine/Source/math/: kmath.c  kmath.h  math_types.h
Engine/Source/memory/: dynamic_allocator.c  dynamic_allocator.h  linear_allocator.c  linear_allocator.h
Engine/Source/resources/: loaders.h  resource_types.h  resources.h
Engine/Source/resources/loaders/: binary_loader.c  binary_loader.h  image_loader.c  image_loader.h  loader_utils.c  loader_utils.h  material_loader.c  material_loader.h  shader_config_loader.c  shader_config_loader.h  text_loader.c  text_loader.h
Engine/Source/systems/: event_system.c  event_system.h  geometry_system.c  geometry_system.h  material_system.c  material_system.h  memory_system.c  memory_system.h  resource_manager.c  resource_manager.h  resource_system.c  resource_system.h  shader_system.c  shader_system.h  texture_system.c  texture_system.h
Samples/: CMakeLists.txt  Entry.c  Game.c  Game.h
assets/materials/: test_ui_material.json
assets/shaders/: Builtin.ObjectShader.frag.glsl  Builtin.ObjectShader.vert.glsl  builtin_material_config.json  builtin_material_vert.glsl  builtin_ui_config.json  predefined.material_shader.vert.glsl
test_game/: entry.c  game.c  game.h
tests/: CMakeLists.txt
tests/source/: expect.h  main.c  test_manager.c  test_manager.h
tests/source/containers/: freelist_tests.c  hash_table_tests.c  hash_table_tests.h  hashtable_tests.c
tests/source/memory/: linear_allocator_tests.c
